@startuml
title Package di Analisi: Servizi - Smart Home System

skinparam linetype ortho
skinparam backgroundColor #FEFEF8
skinparam defaultFontSize 11

package "Gestione Servizi" as PktServizio <<Service>> {
  class Stanza {
    + id: str
    + nome: str
    + piano: int
    + dispositivi: list
    + aggiungi_dispositivo(dispositivo: Dispositivo): void
    + rimuovi_dispositivo(id_dispositivo: str): bool
    + elenca_dispositivi(): list
    + get_dispositivi_per_tipo(tipo: str): list
  }

  class Dispositivo {
    + id: str
    + nome: str
    + stato: str
    + online: bool
    + tipo: str
    + id_stanza: str
    + accendi(): void
    + spegni(): void
    + cambia_stato(nuovo_stato: str): bool
    + invia_comando(comando: str): bool
    + is_online(): bool
    + get_stato(): str
    + get_tipo(): str
  }

  class ServizioStanze {
    + crea(stanza: Stanza): Stanza
    + aggiorna(stanza: Stanza): Stanza
    + elimina(id_stanza: str): bool
    + elenca(): list
    + trova_per_id(id_stanza: str): Stanza
  }

  class ServizioDispositivi {
    + crea(dispositivo: Dispositivo): Dispositivo
    + aggiorna(dispositivo: Dispositivo): Dispositivo
    + elimina(id_dispositivo: str): bool
    + elenca(): list
    + trova_per_id(id_dispositivo: str): Dispositivo
    + invia_comando(id_dispositivo: str, comando: str): Dispositivo
  }
}

Stanza "1" o-- "0..*" Dispositivo : contiene

ServizioStanze --> Stanza : gestisce
ServizioDispositivi --> Dispositivo : gestisce

ServizioStanze --> Dispositivo : assegna
ServizioDispositivi --> Stanza : opera su

@enduml
